src/test/kalang-snippets/error/ParamNameRepeat.kl
'name' is defined in the scope@3
void test(
     String name,
     String name
) {

}